@@ -1,6 +1,9 @@
 package com.example.adminpanel.service;
 
-import com.example.adminpanel.dto.*;
+import com.example.adminpanel.dto.IngredientDto;
+import com.example.adminpanel.dto.PostDto;
+import com.example.adminpanel.dto.TagDto;
+import com.example.adminpanel.dto.UserDto;
 import com.example.adminpanel.wrapper.PostListWrapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -20,44 +23,88 @@ public class AdminService {
         this.restTemplate = restTemplate;
     }
 
-    public List<TagDto> getTags() {
-        TagDto[] tagDtos = restTemplate.getForObject(URL+"tag/", TagDto[].class);
-        return Arrays.stream(tagDtos)
-                .toList();
+    public List<TagDto> getTags(String idFilter, String nameFilter) {
+        TagDto[] arr = restTemplate.getForObject(URL + "tag/", TagDto[].class);
+        List<TagDto> list = arr != null
+                ? new ArrayList<>(Arrays.asList(arr))
+                : new ArrayList<>();
 
+        if (idFilter != null && !idFilter.isBlank()) {
+            list = list.stream()
+                    .filter(t -> t.getTagId().contains(idFilter))
+                    .collect(Collectors.toList());
+        }
+        if (nameFilter != null && !nameFilter.isBlank()) {
+            String low = nameFilter.toLowerCase();
+            list = list.stream()
+                    .filter(t -> t.getTagName().toLowerCase().contains(low))
+                    .collect(Collectors.toList());
+        }
+
+        return list;
     }
 
-    public List<IngredientDto> getIngredients() {
-        IngredientDto[] ingredientDtos = restTemplate.getForObject(URL+"ingredient/", IngredientDto[].class);
-        return Arrays.stream(ingredientDtos)
-                .toList();
+    public List<IngredientDto> getIngredients(String idFilter, String nameFilter) {
+        IngredientDto[] arr = restTemplate.getForObject(URL + "ingredient/", IngredientDto[].class);
+        List<IngredientDto> list = arr != null
+                ? new ArrayList<>(Arrays.asList(arr))
+                : new ArrayList<>();
+
+        if (idFilter != null && !idFilter.isBlank()) {
+            list = list.stream()
+                    .filter(i -> i.getIngredientId().contains(idFilter))
+                    .collect(Collectors.toList());
+        }
+        if (nameFilter != null && !nameFilter.isBlank()) {
+            String low = nameFilter.toLowerCase();
+            list = list.stream()
+                    .filter(i -> i.getName().toLowerCase().contains(low))
+                    .collect(Collectors.toList());
+        }
+        return list;
     }
 
-    public List<UserDto> getUsers() {
-        UserDto[] userDtos = restTemplate.getForObject(URL+"user/", UserDto[].class);
-        return Arrays.stream(userDtos)
-                .toList();
+    public List<UserDto> getUsers(String idFilter, String emailFilter, String displayNameFilter) {
+        UserDto[] arr = restTemplate.getForObject(URL + "user/", UserDto[].class);
+        List<UserDto> list = arr != null
+                ? new ArrayList<>(Arrays.asList(arr))
+                : new ArrayList<>();
+        if (idFilter != null && !idFilter.isBlank()) {
+            list = list.stream()
+                    .filter(u -> u.getUserId().contains(idFilter))
+                    .collect(Collectors.toList());
+        }
+        if (emailFilter != null && !emailFilter.isBlank()) {
+            String lowEmail = emailFilter.toLowerCase();
+            list = list.stream()
+                    .filter(u -> u.getEmail() != null
+                            && u.getEmail().toLowerCase().contains(lowEmail))
+                    .collect(Collectors.toList());
+        }
+        if (displayNameFilter != null && !displayNameFilter.isBlank()) {
+            String lowName = displayNameFilter.toLowerCase();
+            list = list.stream()
+                    .filter(u -> u.getDisplayName() != null
+                            && u.getDisplayName().toLowerCase().contains(lowName))
+                    .collect(Collectors.toList());
+        }
+        return list;
     }
 
     public UserDto getUserById(String id) {
-        return restTemplate.getForObject(URL+"/user/"+id, UserDto.class);
+        return restTemplate.getForObject(URL + "/user/" + id, UserDto.class);
     }
 
     public List<PostDto> getPosts(String postIdFilter, String emailFilter) {
-        // 1) fetch
         PostDto[] response = restTemplate.getForObject(URL + "post/all", PostDto[].class);
         List<PostDto> posts = response != null
                 ? new ArrayList<>(Arrays.asList(response))
                 : new ArrayList<>();
-
-        // 2) filtr po postId
         if (postIdFilter != null && !postIdFilter.isBlank()) {
             posts = posts.stream()
                     .filter(p -> p.getPostId().contains(postIdFilter))
                     .collect(Collectors.toList());
         }
-
-        // 3) filtr po email autora
         if (emailFilter != null && !emailFilter.isBlank()) {
             posts = posts.stream()
                     .filter(p -> {
@@ -68,8 +115,6 @@ public class AdminService {
                     })
                     .collect(Collectors.toList());
         }
-
-        // 4) łączenie obrazków (Twoja istniejąca logika)
         for (PostDto post : posts) {
             Map<String, String> combined = new LinkedHashMap<>();
             if (post.getRecipe().getPictures() != null) {
@@ -83,31 +128,34 @@ public class AdminService {
             }
             post.getRecipe().setPictures(combined);
         }
-
         return posts;
     }
 
     public void deleteTagById(String id) {
-        restTemplate.delete(URL+"tag/" + id);
-    }
-    public void deleteIngredientsById(String id) {
-        restTemplate.delete(URL+"ingredient/" + id);
+        restTemplate.delete(URL + "tag/" + id);
     }
 
-    private void deletePostsByUserId(String id) {
+    public void deleteIngredientsById(String id) {
+        restTemplate.delete(URL + "ingredient/" + id);
+    }
+
+    private void deletePostsByUserId(String id) {//TODO do testu
         PostListWrapper response = restTemplate.getForObject(URL + "user/" + id + "/posts", PostListWrapper.class);
         if (response != null && response.getPosts() != null) {
             for (PostDto postDto : response.getPosts()) {
                 restTemplate.delete(URL + "post/" + postDto.getPostId());
             }
         }
-
     }
 
     public void deleteUserById(String id) {
         if (!getUserById(id).getEmail().equals(currentEmail)) {
             deletePostsByUserId(id);
-            restTemplate.delete(URL+"user/"+id);
+            restTemplate.delete(URL + "user/" + id);
         }
+    }
+
+    public void deletePostById(String id) {
+        restTemplate.delete(URL + "post/" + id);
     }
 }
